@@ -162,3 +162,201 @@ void WDT::callback_print(void)
 
   cout << "WDT\n";
 }
+
+
+//------------------------------------------------------------------------
+// member functions for the Program_Counter base class
+//------------------------------------------------------------------------
+//
+
+//--------------------------------------------------
+
+Program_Counter::Program_Counter(void)
+{
+  if(verbose)
+    cout << "pc constructor\n";
+
+  reset_address = 0;
+  value = 0;
+  pclath_mask = 0x1800;    // valid pclath bits for branching in 14-bit cores 
+
+  xref = new XrefObject(&value);
+
+
+}
+
+//--------------------------------------------------
+// increment - update the program counter. All non-branching instructions pass through here.
+//   
+
+void Program_Counter::increment(void)
+{
+
+  value = (value + 1) & memory_size_mask;
+  trace.program_counter(value);
+
+  // Update pcl. Note that we don't want to pcl.put() because that 
+  // will trigger a break point if there's one set on pcl. (A read/write
+  // break point on pcl should not be triggered by advancing the program
+  // counter).
+
+  cpu_pic->pcl->value = value & 0xff;
+  cycles.increment();
+}
+
+//--------------------------------------------------
+// skip - Does the same thing that increment does, except that it records the operation
+// in the trace buffer as a 'skip' instead of a 'pc update'.
+//   
+
+void Program_Counter::skip(void)
+{
+
+  trace.cycle_increment();
+  value = (value + 1) & memory_size_mask;
+  trace.pc_skip(value);
+
+
+  // Update pcl. Note that we don't want to pcl.put() because that 
+  // will trigger a break point if there's one set on pcl. (A read/write
+  // break point on pcl should not be triggered by advancing the program
+  // counter).
+
+  cpu_pic->pcl->value = value & 0xff;
+  cycles.increment();
+}
+
+//--------------------------------------------------
+// jump - update the program counter. All branching instructions except computed gotos
+//        and returns go through here.
+
+void Program_Counter::jump(unsigned int new_address)
+{
+
+  // Use the new_address and the cached pclath (or page select bits for 12 bit cores)
+  // to generate the destination address:
+
+  //value = (new_address | cpu_pic->get_pclath_branching_jump() ) & memory_size_mask;
+  value = new_address & memory_size_mask;
+
+    // see Update pcl comment in Program_Counter::increment()
+
+  cpu_pic->pcl->value = value & 0xff;
+  
+  cycles.increment();
+  trace.program_counter(value);
+  cycles.increment();
+
+}
+
+//--------------------------------------------------
+// interrupt - update the program counter. Like a jump, except pclath is ignored.
+//
+
+void Program_Counter::interrupt(unsigned int new_address)
+{
+
+  // Use the new_address and the cached pclath (or page select bits for 12 bit cores)
+  // to generate the destination address:
+
+  value = new_address & memory_size_mask;
+
+  cpu_pic->pcl->value = value & 0xff;    // see Update pcl comment in Program_Counter::increment()
+  
+  cycles.increment();
+  
+  trace.cycle_increment(); 
+  trace.program_counter(value);
+
+  cycles.increment();
+
+}
+
+//--------------------------------------------------
+// computed_goto - update the program counter. Anytime the pcl register is written to
+//                 by the source code we'll pass through here.
+//
+
+void Program_Counter::computed_goto(unsigned int new_address)
+{
+
+  // Use the new_address and the cached pclath (or page select bits for 12 bit cores)
+  // to generate the destination address:
+
+  value = (new_address | cpu_pic->get_pclath_branching_modpcl() ) & memory_size_mask;
+
+  trace.cycle_increment();
+  trace.program_counter(value);
+
+  // see Update pcl comment in Program_Counter::increment()
+
+  cpu_pic->pcl->value = value & 0xff;
+
+  // The instruction modifying the PCL will also increment the program counter.
+  // So, pre-compensate the increment with a decrement:
+  value--;
+  cycles.increment();
+}
+
+//--------------------------------------------------
+// new_address - write a new value to the program counter. All returns pass through here.
+//
+
+void Program_Counter::new_address(unsigned int new_value)
+{
+  value = new_value & memory_size_mask;
+  trace.cycle_increment();
+  trace.program_counter(value);
+
+  // see Update pcl comment in Program_Counter::increment()
+
+  cpu_pic->pcl->value = value & 0xff;
+  cycles.increment();
+  cycles.increment();
+}
+
+//--------------------------------------------------
+// get_next - get the next address that is just pass the current one
+//            (used by 'call' to obtain the return address)
+
+unsigned int Program_Counter::get_next(void)
+{
+
+  return( (value + cpu->program_memory[value]->instruction_size()) & memory_size_mask);
+
+}
+
+
+//--------------------------------------------------
+// put_value - Change the program counter without affecting the cycle counter
+//             (This is what's called if the user changes the pc.)
+
+void Program_Counter::put_value(unsigned int new_value)
+{
+  // FIXME 
+#define PCLATH_MASK              0x1f
+
+  value = new_value & memory_size_mask;
+  cpu_pic->pcl->value = value & 0xff;
+  cpu_pic->pclath->value = (new_value >> 8) & PCLATH_MASK;
+
+  trace.program_counter(value);
+
+  if(xref)
+    {
+      if(cpu_pic->pcl->xref)
+	cpu_pic->pcl->xref->update();
+      if(cpu_pic->pclath->xref)
+	cpu_pic->pclath->xref->update();
+	xref->update();
+    }
+  
+
+}
+
+void Program_Counter::reset(void)
+{ 
+  value = reset_address;
+  trace.program_counter(value);
+}
+
